# herbie

./: .env.example  .gitignore  .travis.yml  Dockerfile  Dockerfile.prod  LICENSE  MANIFEST.in  README.md  README_old.md  docker-compose-aio.yml  docker-compose-google-pubsub.yml  docker-compose-kafka.yml  docker-compose.prod.yml  docker-compose.yml  installer.sh  manage.py  pyproject.toml  pytest.ini  requirements-testing.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  pypi_publish.yml
carl_herbie/: asgi.py  settings.py  urls.py  wsgi.py
carl_herbie_app/: apps.py
carl_herbie_app/admin/: __init__.py
carl_herbie_app/migrations/: 0001_initial.py
carl_herbie_app/models/: __init__.py
connectors/segmentcom/: connector.py  requirements.txt
connectors/zapier/: Dockerfile  connector.py
docs/: add_service_client.md  combining_business_entities.md  core_concepts.md  pycharmConfig.md  pycharm_config.md  social_login.md  walkthrough.md
example_consumers/google_pub_sub_consumer/: Dockerfile  consumer.md  consumer.py
example_consumers/google_pubsub_consumer/: consumer.md  consumer.py
example_consumers/kafka_consumer/: Dockerfile  consumer.py
examples/consumer/: consumer.md  consumer.py
herbie/: apps.py  constants.py  default_settings.py  settings.py  urls.py  wsgi.py
herbie-old/: settings.py  urls.py
herbie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
herbie/admin/: business_entity.py  json_schema.py
herbie/authentication/: social_authentication.py
herbie/controllers/: delete_business_entity_controller.py  save_business_entity_controller.py  schema_registry_controller.py  utils.py
herbie/exceptions/: invalid_messaging_provider.py
herbie/initializers/: permisson_initializer.py  schema_initializer.py
herbie/migrations/: 0002_customer_product.py
herbie/models/: generated_models.py  message_models_and_serializers.py
herbie/services/: __init__.py  business_entity_manager.py  json_schema_validator.py  permission_manager.py  schema_importer.py  schema_package.py  schema_registry.py  utils.py
herbie/views/: __init__.py  delete_business_entity_view.py  save_business_entity_view.py  schema_registry_view.py  utils.py
herbie_core/: apps.py  constants.py  urls.py
herbie_core/admin/: __init__.py  business_entity.py  json_schema.py
herbie_core/authentication/: social_authentication.py
herbie_core/exceptions/: invalid_messaging_provider.py
herbie_core/initializers/: abstract_initializer.py  permisson_initializer.py  schema_initializer.py
herbie_core/migrations/: 0001_initial.py  0002_alter_schema_id.py
herbie_core/models/: __init__.py  generated_models.py  message_models_and_serializers.py  models.py  schema.py
herbie_core/serializers/: business_entity_serializer.py
herbie_core/services/: business_entity_manager.py  json_schema_validator.py  permission_manager.py  schema_data_generator.py  schema_importer.py  schema_package.py  schema_registry.py  schema_version_compatibility.py  utils.py
herbie_core/views/: delete_business_entity_view.py  get_business_entity_data_view.py  save_business_entity_view.py  schema_registry_view.py  utils.py  (+1 more)
herbie_google_pubsub/: apps.py
herbie_kafka/: apps.py
herbieapp/: apps.py  constants.py  inject_config.py
legacy/: docker-compose-kafka.yml
requirements/: requirements-testing.txt
tests/: conftest.py
wayne/: settings.py  urls.py  wsgi.py
wayneapp/: admin.py  apps.py  constants.py  controllers.py  messages.py  models.py  services.py
(+220 files in other folders)
