[tool.poetry]
name = "www"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
kafka-python = "1.4.7"
Django = "^3.0.3"
djangorestframework = "^3.11.0"
django-model-utils = "4.0.0"
django-environ = "^0.4.5"
python = "^3.8"
psycopg2 = "^2.8.4"
pytz = "^2019.3"
sqlparse = "^0.3.0"
jsonschema = "3.2.0"
social-auth-app-django  = "3.1.0"
social-auth-core = "3.2.0"
herbie-json-schema = { git = "https://github.com/project-a/herbie-json-schema.git", branch = "master" }
google-cloud-pubsub = "^1.1.0"


[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.2"
pytest-django = "^3.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"