[tool.poetry]
name = "carl_herbie"
version = "0.1.0"
description = ""
authors = ["Barash Asenov <asenov@carlfinance.de>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
django-environ = "^0.4.5"
herbie = "^1.0b1"
herbie-google-pubsub-adapter = "^1.0b1"
psycopg2-binary = "^2.9.1"
carl-business-json-schema = { git = "ssh://git@github.com/carlfin/business-json-schema.git", branch = "master" }
herbie-bigquery-export = { git = "ssh://git@github.com/carlfin/herbie-bigquery-export.git", branch = "staging" }

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
