[metadata]
name = herbie
version = 0.1
description = Herbie is a central data store for business data in a distributed service architecture.
long_description = file: README.rst
url = https://github.com/herbie
author =
author_email =
license = MIT

[options]
python_requires = >=3.6
include_package_data = true
packages = find:
install_requires =
    django >= 3.0
    django-environ >= 0.4
    django-model-utils >= 4.0
    djangorestframework >= 3.11
    jsonschema >= 3.2
    psycopg2 >= 2.8

[options.extras_require]
social-auth-app-django = >=3.1.0
social-auth-core = 3.2.0
google-cloud-pubsub = 1.1.0
kafka-python = 1.4.7
