[metadata]
name = herbie
version = 1.0b2
author = Project A Services GmbH & Co. KG
author_email = herbie@project-a.com
description = Herbie is a central data store for business data in a distributed service architecture.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/herbie/herbie
license = MIT
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
include_package_data = true
packages = find:
install_requires =
    django >= 3.2, < 4.0
    django-environ >= 0.4
    django-model-utils >= 4.0
    djangorestframework >= 3.11, < 4.0
    jsonschema >= 3.2
    psycopg2 >= 2.8
    strict-rfc3339 >= 0.7, < 1.0

[options.extras_require]
dev =
    twine
tests =
    pytest >= 5.4.3, < 6.0
    pytest-django >= 3.7.0, < 4.0
    flake8 >= 3.8.0
    black == 19.10b0
    Faker == 4.1.2
    rstr == 2.2.6
social_login =
    social-auth-app-django == 3.1.0

[flake8]
exclude =
    .git,
    __pycache__,
    migrations,
    herbie_core/models/generated_models.py,
    venv,
    build,
    dist
ignore = W503,W601
max-line-length = 119
